@@ -11,3 +11,4 @@ Direct3D 11
 	* Added the UnorderedAccess member to BindFlags.
 	* Added the ability to create structured buffer resources.
 	* Added missing fields to ShaderResourceViewDescription.
+	* Added missing Flag field to DepthStencilViewDescription.
